--- a/index.html
+++ b/index.html
@@ -9,28 +9,38 @@
     <h1>Capybara Blog</h1>
 
     <div id="introduction">
-    <h2>What are capybaras?</h2>
-    <p>Capybaras are cavy rodents of unusual size.</p>
-    
-    <h3>Close Relatives</h3>
-    <ul>
-        <li>Guinea Pigs</li>
-        <li>Rock Cavies</li>
-    </ul>
-
-    <h3>Distant Relatives</h3>
-    <ul>
-        <li>Agouti</li>
-        <li>Chincilla</li>
-        <li>Nutria</li>
+    <p> Welcome to the enchanting world of capybaras, the gentle giants of the rodent realm! These amiable creatures are not only the largest rodents on Earth but also the most sociable. 
+        With their calm demeanor and tendency to bask in communal groups, capybaras embody the spirit of peaceful coexistence. 
+        Often found lounging along riverbanks in South America, these semi-aquatic mammals are a testament to nature’s ability to surprise and delight us. 
+        Join us as we delve into the life of capybaras, where every day is an invitation to slow down and enjoy the simple pleasures of life alongside these endearing animals. </p>
     </ul>
     </div>
 
     <div id="facts">
+    <h2>Information</h2>
     </div>
-    <h2>Description</h2>
+    <h3>Features</h3>
+    <p> Capybaras are distinguished by their heavy, barrel-shaped bodies and short heads. Their fur is reddish-brown on the upper parts, transitioning to yellowish-brown beneath. 
+        These large rodents have blunt snouts, short legs, small ears, and almost no tail. 
+        Despite their size, capybaras have a rather endearing appearance, with a calm and friendly expression that reflects their gentle disposition.</p>
+    <br>
 
-    <h2>Habitats</h2>
+    <h3>Relatives</h3>
+    <p> Capybaras are part of a family of rodents known as Caviidae, which includes several other species. 
+        Their closest living relatives are the lesser capybara and the rock cavies. 
+        They are also related to guinea pigs and more distantly to the agouti, chinchilla, and nutria. 
+        These relatives share a common South American heritage, with adaptations that allow them to thrive in varied environments, from dense forests to open savannas. 
+        The capybara’s lineage is an intriguing tale of evolution and adaptation, reflecting the diverse and dynamic ecosystems of their native continent. </p>
+    <br>
+
+    <h3>Habitats</h3>
+    <p> Capybaras, the world’s largest rodents, are native to several countries across South America. To be more exact, there are found in Brazil, Colombia, Venezuela, Bolivia, Peru, Ecuador, Argentina, Paraguay, and Uruguay. 
+        These countries provide the warm climates and water-rich environments that capybaras thrive in. </p>
+    <p> Interestingly, while not native, there have also been sightings of capybaras in Florida and they are a beloved animal in Japan. </p>
+    <br>
+    <p> Futhermore, they are found near waterbeds such as rivers, lakes, ponds, marshes, and swamps.</p>
+
+
     <div id="media">
 
     </div>
