--- a/index.html
+++ b/index.html
@@ -1,48 +1,105 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Capybara</title>
-</head>
-<body>
+    <link rel="stylesheet" href="./CSS/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Madimi+One&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
     <h1>Capybara Blog</h1>
-
+    <img
+      src="https://cdn.britannica.com/79/191679-050-C7114D2B/Adult-capybara.jpg"
+      alt="picture of a capybara"
+      height="500"
+      width="700"
+      class="center"
+    />
     <div id="introduction">
-    <p> Welcome to the enchanting world of capybaras, the gentle giants of the rodent realm! These amiable creatures are not only the largest rodents on Earth but also the most sociable. 
-        With their calm demeanor and tendency to bask in communal groups, capybaras embody the spirit of peaceful coexistence. 
-        Often found lounging along riverbanks in South America, these semi-aquatic mammals are a testament to nature’s ability to surprise and delight us. 
-        Join us as we delve into the life of capybaras, where every day is an invitation to slow down and enjoy the simple pleasures of life alongside these endearing animals. </p>
-    </ul>
+      <p>
+        Welcome to the enchanting world of capybaras, the gentle giants of the
+        rodent realm! These amiable creatures are not only the largest rodents
+        on Earth but also the most sociable. With their calm demeanor and
+        tendency to bask in communal groups, capybaras embody the spirit of
+        peaceful coexistence. Often found lounging along riverbanks in South
+        America, these semi-aquatic mammals are a testament to nature’s ability
+        to surprise and delight us. Join us as we delve into the life of
+        capybaras, where every day is an invitation to slow down and enjoy the
+        simple pleasures of life alongside these endearing animals.
+      </p>
     </div>
 
     <div id="facts">
-    <h2>Information</h2>
+      <h2>Information</h2>
     </div>
     <h3>Features</h3>
-    <p> Capybaras are distinguished by their heavy, barrel-shaped bodies and short heads. Their fur is reddish-brown on the upper parts, transitioning to yellowish-brown beneath. 
-        These large rodents have blunt snouts, short legs, small ears, and almost no tail. 
-        Despite their size, capybaras have a rather endearing appearance, with a calm and friendly expression that reflects their gentle disposition.</p>
-    <br>
+    <img
+      src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/34/Hydrochoeris_hydrochaeris_in_Brazil_in_Petr%C3%B3polis%2C_Rio_de_Janeiro%2C_Brazil_09.jpg/1200px-Hydrochoeris_hydrochaeris_in_Brazil_in_Petr%C3%B3polis%2C_Rio_de_Janeiro%2C_Brazil_09.jpg"
+      height="500"
+      width="700"
+      class="center"
+    />
+    <p>
+      Capybaras are distinguished by their heavy, barrel-shaped bodies and short
+      heads. Their fur is reddish-brown on the upper parts, transitioning to
+      yellowish-brown beneath. These large rodents have blunt snouts, short
+      legs, small ears, and almost no tail. Despite their size, capybaras have a
+      rather endearing appearance, with a calm and friendly expression that
+      reflects their gentle disposition.
+    </p>
+    <br />
 
     <h3>Relatives</h3>
-    <p> Capybaras are part of a family of rodents known as Caviidae, which includes several other species. 
-        Their closest living relatives are the lesser capybara and the rock cavies. 
-        They are also related to guinea pigs and more distantly to the agouti, chinchilla, and nutria. 
-        These relatives share a common South American heritage, with adaptations that allow them to thrive in varied environments, from dense forests to open savannas. 
-        The capybara’s lineage is an intriguing tale of evolution and adaptation, reflecting the diverse and dynamic ecosystems of their native continent. </p>
-    <br>
+    <img
+      src="https://upload.wikimedia.org/wikipedia/commons/c/c6/Wildmeerschweinchen-06.jpg"
+    />
+    <img
+      src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6c/Kerodon_rupestris.jpg/1920px-Kerodon_rupestris.jpg"
+      width="698"
+      height="522"
+    />
+    <p>
+      Capybaras are part of a family of rodents known as Caviidae, which
+      includes several other species. Their closest living relatives are the
+      lesser capybara, guinea pigs, and the rock cavies. They are also related
+      to guinea pigs and more distantly to the agouti, chinchilla, and nutria.
+      These relatives share a common South American heritage, with adaptations
+      that allow them to thrive in varied environments, from dense forests to
+      open savannas. The capybara’s lineage is an intriguing tale of evolution
+      and adaptation, reflecting the diverse and dynamic ecosystems of their
+      native continent.
+    </p>
+    <br />
 
     <h3>Habitats</h3>
-    <p> Capybaras, the world’s largest rodents, are native to several countries across South America. To be more exact, there are found in Brazil, Colombia, Venezuela, Bolivia, Peru, Ecuador, Argentina, Paraguay, and Uruguay. 
-        These countries provide the warm climates and water-rich environments that capybaras thrive in. </p>
-    <p> Interestingly, while not native, there have also been sightings of capybaras in Florida and they are a beloved animal in Japan. </p>
-    <br>
-    <p> Futhermore, they are found near waterbeds such as rivers, lakes, ponds, marshes, and swamps.</p>
+    <img
+      src="https://cdn.britannica.com/99/138899-050-BC3398E2/Capybara.jpg"
+      height="500"
+      width="700"
+      class="center"
+    />
+    <p>
+      Capybaras, the world’s largest rodents, are native to several countries
+      across South America. To be more exact, there are found in Brazil,
+      Colombia, Venezuela, Bolivia, Peru, Ecuador, Argentina, Paraguay, and
+      Uruguay. These countries provide the warm climates and water-rich
+      environments that capybaras thrive in.
+    </p>
+    <p>
+      Interestingly, while not native, there have also been sightings of
+      capybaras in Florida and they are a beloved animal in Japan.
+    </p>
+    <p>
+      They are also found near waterbeds such as rivers, lakes, ponds,
+      marshes, and swamps.
+    </p>
 
-
-    <div id="media">
-
-    </div>
-</body>
+    <div id="media"></div>
+  </body>
 </html>
