Changed and added some UI elements

--- a/index.html
+++ b/index.html
@@ -13,17 +13,15 @@
     />
   </head>
   <body>
-    <h1>Capybara Blog</h1>
+    <h1>The Capybara Chronicles: Adventures in Cavy Culture</h1>
     <img
       src="https://cdn.britannica.com/79/191679-050-C7114D2B/Adult-capybara.jpg"
       alt="picture of a capybara"
-      height="500"
-      width="700"
-      class="center"
+      class="rounded--portrait smaller--image floatleft"
     />
     <div id="introduction">
       <p>
-        Welcome to the enchanting world of capybaras, the gentle giants of the
+        Welcome to the enchanting world of capybaras (<em>Hydrochoerus hydrochaeris</em>), the gentle giants of the
         rodent realm! These amiable creatures are not only the largest rodents
         on Earth but also the most sociable. With their calm demeanor and
         tendency to bask in communal groups, capybaras embody the spirit of
@@ -34,16 +32,16 @@
         simple pleasures of life alongside these endearing animals.
       </p>
     </div>
-
+    <br/>
+    <br/>
     <div id="facts">
       <h2>Information</h2>
     </div>
     <h3>Features</h3>
     <img
       src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/34/Hydrochoeris_hydrochaeris_in_Brazil_in_Petr%C3%B3polis%2C_Rio_de_Janeiro%2C_Brazil_09.jpg/1200px-Hydrochoeris_hydrochaeris_in_Brazil_in_Petr%C3%B3polis%2C_Rio_de_Janeiro%2C_Brazil_09.jpg"
-      height="500"
-      width="700"
-      class="center"
+      alt="another picture of a capybara"
+      class="rounded--portrait smaller--image floatright"
     />
     <p>
       Capybaras are distinguished by their heavy, barrel-shaped bodies and short
@@ -53,16 +51,19 @@
       rather endearing appearance, with a calm and friendly expression that
       reflects their gentle disposition.
     </p>
-    <br />
-
+    <br/>
+    <br/>
+    <br/>
     <h3>Relatives</h3>
     <img
       src="https://upload.wikimedia.org/wikipedia/commons/c/c6/Wildmeerschweinchen-06.jpg"
+      class="rounded--portrait"
     />
     <img
       src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6c/Kerodon_rupestris.jpg/1920px-Kerodon_rupestris.jpg"
       width="698"
       height="522"
+      class="rounded--portrait"
     />
     <p>
       Capybaras are part of a family of rodents known as Caviidae, which
@@ -82,7 +83,7 @@
       src="https://cdn.britannica.com/99/138899-050-BC3398E2/Capybara.jpg"
       height="500"
       width="700"
-      class="center"
+      class="rounded--portrait center"
     />
     <p>
       Capybaras, the world’s largest rodents, are native to several countries
