Changes in font and removed an image

--- a/index.html
+++ b/index.html
@@ -14,26 +14,20 @@
   </head>
   <body>
     <h1>The Capybara Chronicles: Adventures in Cavy Culture</h1>
-    <img
-      src="https://cdn.britannica.com/79/191679-050-C7114D2B/Adult-capybara.jpg"
-      alt="picture of a capybara"
-      class="rounded--portrait smaller--image floatleft"
-    />
+
     <div id="introduction">
       <p>
-        Welcome to the enchanting world of capybaras (<em>Hydrochoerus hydrochaeris</em>), the gentle giants of the
-        rodent realm! These amiable creatures are not only the largest rodents
-        on Earth but also the most sociable. With their calm demeanor and
-        tendency to bask in communal groups, capybaras embody the spirit of
-        peaceful coexistence. Often found lounging along riverbanks in South
-        America, these semi-aquatic mammals are a testament to nature’s ability
-        to surprise and delight us. Join us as we delve into the life of
-        capybaras, where every day is an invitation to slow down and enjoy the
-        simple pleasures of life alongside these endearing animals.
+        Welcome to the enchanting world of capybaras (<em>Hydrochoerus hydrochaeris</em>), 
+        the gentle giants of the rodent realm! These amiable creatures are
+        not only the largest rodents on Earth but also the most sociable. With
+        their calm demeanor and tendency to bask in communal groups, capybaras
+        embody the spirit of peaceful coexistence. Often found lounging along
+        riverbanks in South America, these semi-aquatic mammals are a testament
+        to nature’s ability to surprise and delight us. Join us as we delve into
+        the life of capybaras, where every day is an invitation to slow down and
+        enjoy the simple pleasures of life alongside these endearing animals.
       </p>
     </div>
-    <br/>
-    <br/>
     <div id="facts">
       <h2>Information</h2>
     </div>
@@ -51,9 +45,14 @@
       rather endearing appearance, with a calm and friendly expression that
       reflects their gentle disposition.
     </p>
-    <br/>
-    <br/>
-    <br/>
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
     <h3>Relatives</h3>
     <img
       src="https://upload.wikimedia.org/wikipedia/commons/c/c6/Wildmeerschweinchen-06.jpg"
@@ -97,8 +96,8 @@
       capybaras in Florida and they are a beloved animal in Japan.
     </p>
     <p>
-      They are also found near waterbeds such as rivers, lakes, ponds,
-      marshes, and swamps.
+      They are also found near waterbeds such as rivers, lakes, ponds, marshes,
+      and swamps.
     </p>
 
     <div id="media"></div>
